lvmcfg (0.27) UNRELEASED; urgency=low

  * Christian Perrier
    - Big templates rewrite : remove all caps, trying to unfuzzy translations
      when relevant. Use "__Choices" for menu entries. Comments added for
      translators

 -- Christian Perrier <bubulle@debian.org>  Sun,  9 May 2004 09:56:40 +0200

lvmcfg (0.26) unstable; urgency=low

  * Martin Michlmayr
    - Support LVM1 and LVM2.
    - Switch to LVM2.  Closes: #224661
    - Honour the "Go Back" button in the PV selection menu.
    - Honour the "Go Back" button in the VG and LV creation menu when
      asking for the name.
    - Print an error when no name for a new VG or LV is given.
      Closes: #247147
    - Use a more reliable method to find out whether to install the
      LVM tools.
    - Fix a typo, noticed by Vince Sanders.
    - Mark more strings for translation, thanks Eugeniy Meshcheryakov.
      Closes: #247995
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede
    - Greek (el.po) by Konstantinos Margaritis
    - Spanish (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña
    - French (fr.po) by Michel Grentzinger
    - Japanese (ja.po) by Kenshi Muto
    - Korean (ko.po) by Changwoo Ryu
    - Dutch (nl.po) by Bart Cornelis
    - Norwegian (nn.po) by Håvard Korsvoll
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Albanian (sq.po) by Elian Myftiu
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 09 May 2004 02:58:39 +0100

lvmcfg (0.25) unstable; urgency=low

  * Martin Michlmayr
    - Honour the "Go Back" button and stop rather than proceed.