@@ -163,6 +163,13 @@ Type: error
 _Description: No volume group found
  No volume groups were found for creating a new logical volume.
 
+Template: lvmcfg/lvcreate_nofreevg
+Type: error
+_Description: No volume group found
+ No free volume groups were found for creating a new logical volume.
+ Please create more physical volumes and volume groups, or reduce an
+ existing volume group.
+
 Template: lvmcfg/lvcreate_name
 Type: string
 _Description: Logical volume name:
