@@ -4,6 +4,9 @@ lvmcfg (0.27) UNRELEASED; urgency=low
     - Big templates rewrite : remove all caps, trying to unfuzzy translations
       when relevant. Use "__Choices" for menu entries. Comments added for
       translators
+  * Martin Michlmayr
+    - When creating LVs, only show VGs which have free space.  If there are
+      none, print an error.  Closes: #247002
 
  -- Christian Perrier <bubulle@debian.org>  Sun,  9 May 2004 09:56:40 +0200
 
